--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="description" content="ThriveOn - Empowering Caregivers with AI" />
   <meta name="author" content="ThriveOn" />
 
+  <!-- ✅ Favicon -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
