--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="ThriveOn" />
 
   <!-- ✅ Favicon -->
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="favicon.png" type="image/png" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
