--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <!-- ✅ Footer Links -->
   <div
     style="margin-top: 2rem; padding: 1rem 2rem; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; font-size: 0.875rem; color: #6b7280;">
-    <div>© Built by Caregivers and Survivors @ThriveOn. All rights reserved.</div>
+    <!-- <div>© Built by Caregivers and Survivors @ThriveOn. All rights reserved.</div>  -->
     <div style="display: flex; gap: 1.5rem;">
       <a href="/privacy_policy.html" style="text-decoration: none; color: #6b7280;">Privacy Policy</a>
       <a href="/terms_and_conditions.html" style="text-decoration: none; color: #6b7280;">Terms & Conditions</a>
