--- a/index.html
+++ b/index.html
@@ -48,15 +48,16 @@
 <body>
   <div id="root"></div>
 
-  <!-- ✅ Footer Links -->
-  <div
-    style="margin-top: 2rem; padding: 1rem 2rem; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; font-size: 0.875rem; color: #6b7280;">
-    <!-- <div>© Built by Caregivers and Survivors @ThriveOn. All rights reserved.</div>  -->
-    <div style="display: flex; gap: 1.5rem;">
+  <!-- ✅ Links + Copyright -->
+  <div style="margin-top: 2rem; padding: 1rem 2rem; font-size: 0.875rem; color: #6b7280; text-align: center;">
+    <div style="margin-bottom: 0.5rem; display: flex; justify-content: center; gap: 1.5rem; flex-wrap: wrap;">
       <a href="/privacy_policy.html" style="text-decoration: none; color: #6b7280;">Privacy Policy</a>
       <a href="/terms_and_conditions.html" style="text-decoration: none; color: #6b7280;">Terms & Conditions</a>
       <a href="/contact_page_form.html" style="text-decoration: none; color: #6b7280;">Contact</a>
     </div>
+    <div>© Built by Caregivers and Survivors @ThriveOn. All rights reserved.</div>
+  </div>
+
   </div>
 
   <script type="module" src="/src/main.tsx"></script>
