Add footer links and legal pages (Privacy, Terms, Contact)

--- a/index.html
+++ b/index.html
@@ -46,15 +46,14 @@
 </head>
 
 <body>
-  <div id="root">
+  <div id="root"></div>
 
-    <!-- ✅ Footer Links -->
-    <div
-      style="margin: 2rem auto 4rem; padding: 1rem 2rem; display: flex; justify-content: center; flex-wrap: wrap; gap: 1.5rem; font-size: 0.875rem; color: #6b7280;">
-      <a href="/privacy_policy.html" style="text-decoration: none; color: #6b7280;">Privacy Policy</a>
-      <a href="/terms_and_conditions.html" style="text-decoration: none; color: #6b7280;">Terms & Conditions</a>
-      <a href="/contact_page_form.html" style="text-decoration: none; color: #6b7280;">Contact</a>
-    </div>
+  <!-- ✅ Footer Links -->
+  <div
+    style="margin: 2rem auto 4rem; padding: 1rem 2rem; display: flex; justify-content: center; flex-wrap: wrap; gap: 1.5rem; font-size: 0.875rem; color: #6b7280;">
+    <a href="/privacy_policy.html" style="text-decoration: none; color: #6b7280;">Privacy Policy</a>
+    <a href="/terms_and_conditions.html" style="text-decoration: none; color: #6b7280;">Terms & Conditions</a>
+    <a href="/contact_page_form.html" style="text-decoration: none; color: #6b7280;">Contact</a>
   </div>
 
   <script type="module" src="/src/main.tsx"></script>
