--- a/public/privacy_policy.html
+++ b/public/privacy_policy.html
@@ -1,111 +1,199 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Privacy Policy - ThriveOn</title>
-    <link rel="icon" href="/favicon.png" type="image/png" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <style>
-      body {
-        font-family: 'Inter', sans-serif;
-        margin: 0;
-        padding: 2rem;
-        background-color: #f9f9f9;
-        color: #1f2937;
-        line-height: 1.75;
-        font-size: 0.95rem;
-      }
-      .container {
-        max-width: 720px;
-        margin: 0 auto;
-        background: white;
-        padding: 2rem;
-        border-radius: 8px;
-        box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
-      }
-      h1, h2 {
-        color: #111827;
-      }
-      h1 {
-        font-size: 1.75rem;
-        margin-bottom: 1rem;
-      }
-      h2 {
-        font-size: 1.25rem;
-        margin-top: 2rem;
-        margin-bottom: 0.5rem;
-      }
-      ul {
-        padding-left: 1.25rem;
-        margin-top: 0.5rem;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Privacy Policy</h1>
-      <p>
-        ThriveOn is committed to empowering caregivers with thoughtful tools. This
-        Privacy Policy explains how we collect, use, and protect your information.
-        If you disagree with our practices, please do not use the platform.
-      </p>
 
-      <h2>1. Introduction</h2>
-      <p>
-        At ThriveOn, we take your privacy seriously. This Privacy Policy outlines
-        our data practices and your rights regarding your personal information.
-      </p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ThriveOn - Privacy Policy</title>
 
-      <h2>2. Information We Collect</h2>
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Google Fonts: Lexend -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      font-family: 'Lexend', sans-serif;
+      background-color: #111827;
+      /* Dark background */
+      color: #d1d5db;
+      /* Lighter text for dark mode */
+    }
+
+    .policy-container h2 {
+      font-size: 1.875rem;
+      /* text-3xl */
+      font-weight: 700;
+      color: #ffffff;
+      margin-top: 2.5rem;
+      /* mt-10 */
+      margin-bottom: 1rem;
+      /* mb-4 */
+      border-bottom: 1px solid #374151;
+      /* border-gray-700 */
+      padding-bottom: 0.5rem;
+      /* pb-2 */
+    }
+
+    .policy-container h3 {
+      font-size: 1.25rem;
+      /* text-xl */
+      font-weight: 600;
+      color: #ffffff;
+      margin-top: 2rem;
+      /* mt-8 */
+      margin-bottom: 0.75rem;
+      /* mb-3 */
+    }
+
+    .policy-container p,
+    .policy-container ul {
+      font-size: 1rem;
+      /* text-base */
+      line-height: 1.75;
+      /* leading-loose */
+      color: #d1d5db;
+      margin-bottom: 1rem;
+      /* mb-4 */
+    }
+
+    .policy-container a {
+      color: #2dd4bf;
+      /* teal-400 */
+      text-decoration: underline;
+    }
+
+    .policy-container a:hover {
+      color: #5eead4;
+      /* teal-300 */
+    }
+
+    .policy-container ul {
+      list-style-position: inside;
+      list-style-type: disc;
+    }
+
+    .policy-container li {
+      margin-bottom: 0.5rem;
+      /* mb-2 */
+    }
+  </style>
+</head>
+
+<body class="text-slate-300">
+
+  <!-- Main Content -->
+  <main class="container mx-auto px-6 py-16 md:py-24">
+    <div class="max-w-4xl mx-auto policy-container">
+      <div class="text-center mb-12">
+        <a href="#" class="text-3xl font-bold text-white">
+          Thrive<span class="text-teal-400">On</span>
+        </a>
+      </div>
+      <h1 class="text-4xl md:text-5xl font-bold text-white text-center">Privacy Policy</h1>
+      <p class="text-center text-slate-400 mt-2">Last Updated: July 22, 2025</p>
+
+      <p class="mt-8 text-lg">Your privacy is the foundation of our service. We understand that you are trusting us with
+        deeply personal information, and we are committed to protecting that trust. This policy explains in plain
+        language what information we collect, how we use it, and the rights you have over your data. Our goal is to be
+        transparent and to give you complete control.</p>
+
+      <h2>Our Privacy Promise</h2>
+      <p>Our entire business is built on these three principles:</p>
       <ul>
-        <li>When you fill out forms or subscribe to updates</li>
-        <li>When you contact us via email or messaging</li>
-        <li>Survey responses or interest signals</li>
+        <li><strong>1. You Own Your Data, Always.</strong> The thoughts, feelings, and memories you share within
+          ThriveOn are yours. You can export or delete your data at any time. We are simply custodians of your
+          information.</li>
+        <li><strong>2. We Use Bank-Level Security.</strong> All data is encrypted when it's being transmitted (in
+          transit) and when it's stored on our servers (at rest). We use industry-best practices to protect your
+          information from unauthorized access.</li>
+        <li><strong>3. We Have a Clear Business Model.</strong> We are a subscription service, not a data company. We
+          will never sell, rent, or share your personal data with third-party advertisers or data brokers. Our success
+          depends entirely on earning and keeping your trust, not on monetizing your information.</li>
       </ul>
 
-      <h2>3. How We Use Your Information</h2>
+      <h2>Information We Collect</h2>
+      <h3>Information You Provide Directly</h3>
       <ul>
-        <li>To operate and improve our platform</li>
-        <li>To communicate product updates and support</li>
-        <li>To analyze usage and enhance features</li>
+        <li><strong>Account Information:</strong> When you create an account, we collect basic information like your
+          name and email address.</li>
+        <li><strong>Your Content:</strong> We collect the information you and your AI agents generate within the app.
+          This includes journal entries, responses to prompts, scheduled events, and any other content you create while
+          using the service. This information is necessary for the AI agents to function and provide you with support.
+        </li>
+      </ul>
+      <h3>Information We Collect Automatically</h3>
+      <ul>
+        <li><strong>Usage Data:</strong> We collect non-personally identifiable information about how you interact with
+          our service. This includes things like which features you use most often and when you use the app. We use this
+          data to understand what's working, fix what's not, and improve the overall experience. We do not track your
+          activity outside of the ThriveOn app.</li>
       </ul>
 
-      <h2>4. Information Sharing</h2>
-      <p>
-        We may share information with trusted service providers and legal authorities if required. We do not sell your personal data.
-      </p>
-
-      <h2>5. Data Security</h2>
-      <p>
-        We implement security safeguards to protect your data. However, no system
-        is completely secure.
-      </p>
-
-      <h2>6. Your Rights</h2>
+      <h2>How We Use Your Information</h2>
       <ul>
-        <li>Access and review your personal information</li>
-        <li>Request corrections or deletion</li>
-        <li>Object to processing or request portability</li>
+        <li><strong>To Provide and Improve the Service:</strong> We use your information to operate the AI agents,
+          personalize your experience, and develop new features that make the service more helpful.</li>
+        <li><strong>To Communicate With You:</strong> We may use your email address to send you important updates about
+          your account, security notices, or changes to our policies. You can manage your communication preferences in
+          your account settings.</li>
+        <li><strong>For Security and Safety:</strong> We use information to protect against fraud, abuse, and security
+          risks.</li>
       </ul>
 
-      <h2>7. Cookies</h2>
-      <p>
-        We use cookies for basic analytics and page experience. You can configure
-        your browser to refuse cookies.
-      </p>
+      <h2>How We Share Your Information</h2>
+      <p>We do not share your personal data, except in the following limited circumstances:</p>
+      <ul>
+        <li><strong>With Service Providers:</strong> We work with trusted third-party companies to help us operate our
+          service (e.g., cloud hosting providers like Amazon Web Services). These providers are contractually obligated
+          to protect your data and are not permitted to use it for their own purposes.</li>
+        <li><strong>For Legal Reasons:</strong> We may disclose your information if we believe it's required by law,
+          such as in response to a subpoena or court order. We will attempt to notify you before disclosing your
+          information in response to a legal request unless we are prohibited by law from doing so.</li>
+      </ul>
 
-      <h2>8. Changes to This Policy</h2>
-      <p>
-        Any changes to this Privacy Policy will be updated on this page.
-      </p>
+      <h2>Data Retention and Deletion</h2>
+      <p>We retain your information for as long as your account is active. You have the right to delete your account at
+        any time. When you delete your account, we will permanently and irreversibly delete all of your personal
+        information and content from our systems within a specified period (e.g., 30 days), except for any data we are
+        legally required to retain.</p>
 
-      <h2>9. Contact</h2>
-      <p>Email: privacy@thriveon.app</p>
-      <p>Last Updated: July 21, 2025</p>
+      <h2>Your Rights and Choices</h2>
+      <p>You have control over your personal information. You have the right to:</p>
+      <ul>
+        <li>Access the personal information we hold about you.</li>
+        <li>Correct any inaccurate information.</li>
+        <li>Request the deletion of your account and all associated data.</li>
+      </ul>
+      <p>You can exercise these rights directly within your account settings or by contacting us at the email below.</p>
+
+      <h2>Children's Privacy</h2>
+      <p>ThriveOn is not intended for individuals under the age of 18. We do not knowingly collect personal information
+        from children. If we become aware that we have collected data from a child, we will take steps to delete that
+        information immediately.</p>
+
+      <h2>Changes to This Policy</h2>
+      <p>We may update this privacy policy from time to time. If we make significant changes, we will notify you by
+        email and/or through a prominent notice within the app before the changes take effect. We encourage you to
+        review this policy periodically.</p>
+
+      <h2>Contact Us</h2>
+      <p>If you have any questions, concerns, or feedback about this policy or our privacy practices, please do not
+        hesitate to contact us at <a href="mailto:privacy@thriveon.ai">privacy@thriveon.app</a>.</p>
+
     </div>
-  </body>
+  </main>
+
+  <!-- Footer -->
+  <footer class="bg-gray-900 text-slate-500">
+    <div class="container mx-auto px-6 py-8 text-center border-t border-gray-800">
+      <p>&copy; 2025 ThriveOn. An Agentic AI for Human Connection.</p>
+    </div>
+  </footer>
+
+</body>
+
 </html>
