--- a/public/terms_and_conditions.html
+++ b/public/terms_and_conditions.html
@@ -1,85 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Terms and Conditions | ThriveOn</title>
-    <meta name="description" content="ThriveOn - Terms of Service" />
-  </head>
-  <body>
-    <main style="max-width: 800px; margin: 0 auto; padding: 2rem; font-family: sans-serif; line-height: 1.6;">
-      <h1>Terms of Service</h1>
-      <p>
-        We're proud to support early-stage caregivers with tools that matter. While we're just getting started,
-        early users love ThriveOn for its clean experience, smart tools, and focus on empathy. Join the growing
-        community that's building the future of caregiving together.
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Terms and Conditions - ThriveOn</title>
+
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Google Fonts: Inter -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f9f9f9;
+      color: #1f2937;
+    }
+
+    .terms-container h2 {
+      font-size: 1.5rem;
+      /* text-2xl */
+      font-weight: 600;
+      color: #111827;
+      /* gray-900 */
+      margin-top: 2.5rem;
+      /* mt-10 */
+      margin-bottom: 1rem;
+      /* mb-4 */
+      border-bottom: 1px solid #e5e7eb;
+      /* border-gray-200 */
+      padding-bottom: 0.5rem;
+      /* pb-2 */
+    }
+
+    .terms-container p,
+    .terms-container ul {
+      font-size: 1rem;
+      /* text-base */
+      line-height: 1.75;
+      /* leading-relaxed */
+      color: #374151;
+      /* gray-700 */
+      margin-bottom: 1rem;
+      /* mb-4 */
+    }
+
+    .terms-container a {
+      color: #4a8e84;
+      text-decoration: underline;
+    }
+
+    .terms-container a:hover {
+      color: #3cb8a9;
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- Main Content -->
+  <main class="container mx-auto px-6 py-16 md:py-24">
+    <div class="max-w-4xl mx-auto terms-container">
+      <div class="text-center mb-12">
+        <a href="#" class="text-3xl font-bold text-gray-800">
+          Thrive<span style="color: #4a8e84;">On</span>
+        </a>
+      </div>
+      <h1 class="text-4xl md:text-5xl font-bold text-gray-900 text-center">Terms of Service</h1>
+      <p class="text-center text-gray-500 mt-2">Last Updated: July 21, 2025</p>
+
+      <p class="mt-8 text-lg text-gray-600">
+        Welcome to ThriveOn. These Terms of Service ("Terms") govern your access to and use of the ThriveOn application,
+        website, and services (collectively, the "Platform"). Please read these Terms carefully before using our
+        Platform.
       </p>
 
       <h2>1. Agreement to Terms</h2>
       <p>
-        These Terms of Service constitute a legally binding agreement made between you and ThriveOn, concerning
-        your access to and use of our platform. By accessing or using the platform, you agree to be bound by
-        these Terms. If you disagree with any part of the terms, you may not access the platform.
+        These Terms of Service constitute a legally binding agreement made between you, whether personally or on behalf
+        of an entity (“you”) and ThriveOn (“we,” “us,” or “our”), concerning your access to and use of our Platform. By
+        accessing or using the Platform, you agree to be bound by these Terms. If you disagree with any part of the
+        terms, then you may not access the Platform.
       </p>
 
       <h2>2. Account Registration</h2>
       <p>
-        To access certain features of the platform, you must register for an account. You agree to provide
-        accurate and updated info, maintain account security, and notify us of unauthorized access.
+        To access certain features of the Platform, you may be required to register for an account. You agree to provide
+        accurate, current, and complete information during the registration process and to update such information to
+        keep it accurate, current, and complete. You are responsible for safeguarding your password and for any
+        activities or actions under your account. You agree to notify us immediately of any unauthorized use of your
+        account.
       </p>
 
       <h2>3. User Content</h2>
       <p>
-        You are responsible for any content you submit. By posting content, you grant us the right to use it on
-        the platform. You must have the rights to the content and not violate anyone's privacy or IP.
+        You are solely responsible for any data, text, graphics, messages, or other materials you submit or post to the
+        Platform ("User Content"). By posting User Content, you grant us a non-exclusive, worldwide, royalty-free
+        license to use, reproduce, and display such User Content in connection with providing the Platform's services.
+        You represent and warrant that you have all the rights, power, and authority necessary to grant the rights
+        granted herein to any User Content that you submit and that your User Content does not violate any third-party
+        rights, including privacy and intellectual property rights.
       </p>
 
       <h2>4. Prohibited Activities</h2>
       <p>
-        You agree not to misuse the platform including scraping, impersonation, hacking, or unauthorized
-        automation. Activities that violate laws or disrupt service are not allowed.
+        You agree not to misuse the Platform. This includes, but is not limited to: engaging in any activity that is
+        illegal, harmful, or fraudulent; scraping, data mining, or harvesting user information without consent;
+        impersonating any person or entity; hacking or attempting to gain unauthorized access to the Platform or its
+        related systems; or using any unauthorized automated systems to access the Platform. Activities that disrupt the
+        service or violate applicable laws are strictly prohibited.
       </p>
 
       <h2>5. Intellectual Property</h2>
       <p>
-        The platform and all original content are property of ThriveOn and protected by law. You may not use our
-        branding without permission.
+        The Platform and all of its original content, features, and functionality are and will remain the exclusive
+        property of ThriveOn and its licensors. The Platform is protected by copyright, trademark, and other laws of the
+        United States and foreign countries. Our trademarks and trade dress may not be used in connection with any
+        product or service without the prior written consent of ThriveOn.
       </p>
 
       <h2>6. Termination</h2>
       <p>
-        We may suspend or terminate your access at any time without notice if we believe these Terms are
-        violated.
+        We may suspend or terminate your access to the Platform at any time, without prior notice or liability, for any
+        reason whatsoever, including without limitation if you breach these Terms. Upon termination, your right to use
+        the Platform will immediately cease.
       </p>
 
-      <h2>7. Disclaimer</h2>
+      <h2>7. Disclaimer of Warranties</h2>
       <p>
-        The platform is provided "AS IS". We do not guarantee uninterrupted service or error-free content.
+        The Platform is provided on an "AS IS" and "AS AVAILABLE" basis. We make no warranties, expressed or implied,
+        regarding the operation of the Platform or the information, content, or materials included therein. We do not
+        guarantee that the service will be uninterrupted, secure, or error-free.
       </p>
 
       <h2>8. Limitation of Liability</h2>
       <p>
-        ThriveOn shall not be liable for indirect or consequential damages arising from use of our platform.
+        In no event shall ThriveOn, nor its directors, employees, partners, agents, suppliers, or affiliates, be liable
+        for any indirect, incidental, special, consequential, or punitive damages, including without limitation, loss of
+        profits, data, use, goodwill, or other intangible losses, resulting from your use of our Platform.
       </p>
 
       <h2>9. Governing Law</h2>
       <p>
-        These Terms shall be governed under the laws of the United States.
+        These Terms shall be governed and construed in accordance with the laws of the State of California, United
+        States, without regard to its conflict of law provisions.
       </p>
 
       <h2>10. Changes to Terms</h2>
       <p>
-        We reserve the right to modify these terms. Continued use after changes constitutes your acceptance.
+        We reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a revision is
+        material, we will provide at least 30 days' notice prior to any new terms taking effect. By continuing to access
+        or use our Platform after those revisions become effective, you agree to be bound by the revised terms.
       </p>
 
       <h2>11. Contact Us</h2>
       <p>
-        For any questions about these Terms, please contact us:<br />
-        Email: terms@thriveon.app<br />
+        If you have any questions about these Terms, please contact us at:
+        <br />
+        Email: <a href="mailto:terms@thriveon.ai">terms@thriveon.app</a>
+        <br />
         Address: 123 Wellness Avenue, San Francisco, CA 94110
       </p>
 
-      <p><strong>Last Updated:</strong> July 21, 2025</p>
-    </main>
-  </body>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="text-gray-500">
+    <div class="container mx-auto px-6 py-8 text-center border-t border-gray-200">
+      <p>&copy; 2025 ThriveOn. An Agentic AI for Human Connection.</p>
+    </div>
+  </footer>
+
+</body>
+
 </html>
