Add footer links and legal pages (Privacy, Terms, Contact)

--- a/public/terms_and_conditions.html
+++ b/public/terms_and_conditions.html
@@ -17,22 +17,24 @@
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #f9f9f9;
-      color: #1f2937;
+      background-color: #111827;
+      /* Dark background */
+      color: #d1d5db;
+      /* Lighter text for dark mode */
     }
 
     .terms-container h2 {
       font-size: 1.5rem;
       /* text-2xl */
       font-weight: 600;
-      color: #111827;
-      /* gray-900 */
+      color: #ffffff;
+      /* white */
       margin-top: 2.5rem;
       /* mt-10 */
       margin-bottom: 1rem;
       /* mb-4 */
-      border-bottom: 1px solid #e5e7eb;
-      /* border-gray-200 */
+      border-bottom: 1px solid #374151;
+      /* border-gray-700 */
       padding-bottom: 0.5rem;
       /* pb-2 */
     }
@@ -43,19 +45,21 @@
       /* text-base */
       line-height: 1.75;
       /* leading-relaxed */
-      color: #374151;
-      /* gray-700 */
+      color: #d1d5db;
+      /* slate-300 */
       margin-bottom: 1rem;
       /* mb-4 */
     }
 
     .terms-container a {
-      color: #4a8e84;
+      color: #2dd4bf;
+      /* teal-400 */
       text-decoration: underline;
     }
 
     .terms-container a:hover {
-      color: #3cb8a9;
+      color: #5eead4;
+      /* teal-300 */
     }
   </style>
 </head>
@@ -66,14 +70,14 @@
   <main class="container mx-auto px-6 py-16 md:py-24">
     <div class="max-w-4xl mx-auto terms-container">
       <div class="text-center mb-12">
-        <a href="#" class="text-3xl font-bold text-gray-800">
-          Thrive<span style="color: #4a8e84;">On</span>
+        <a href="#" class="text-3xl font-bold text-white">
+          Thrive<span style="color: #2dd4bf;">On</span>
         </a>
       </div>
-      <h1 class="text-4xl md:text-5xl font-bold text-gray-900 text-center">Terms of Service</h1>
-      <p class="text-center text-gray-500 mt-2">Last Updated: July 21, 2025</p>
+      <h1 class="text-4xl md:text-5xl font-bold text-white text-center">Terms of Service</h1>
+      <p class="text-center text-slate-400 mt-2">Last Updated: July 21, 2025</p>
 
-      <p class="mt-8 text-lg text-gray-600">
+      <p class="mt-8 text-lg text-slate-300">
         Welcome to ThriveOn. These Terms of Service ("Terms") govern your access to and use of the ThriveOn application,
         website, and services (collectively, the "Platform"). Please read these Terms carefully before using our
         Platform.
@@ -161,7 +165,7 @@
       <p>
         If you have any questions about these Terms, please contact us at:
         <br />
-        Email: <a href="mailto:terms@thriveon.ai">terms@thriveon.app</a>
+        Email: <a href="mailto:terms@thriveon.app">terms@thriveon.app</a>
         <br />
         Address: 123 Wellness Avenue, San Francisco, CA 94110
       </p>
@@ -170,8 +174,8 @@
   </main>
 
   <!-- Footer -->
-  <footer class="text-gray-500">
-    <div class="container mx-auto px-6 py-8 text-center border-t border-gray-200">
+  <footer class="text-slate-400">
+    <div class="container mx-auto px-6 py-8 text-center border-t border-gray-700">
       <p>&copy; 2025 ThriveOn. An Agentic AI for Human Connection.</p>
     </div>
   </footer>
