--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
     <a href="/privacy_policy.html" style="text-decoration: none; color: #6b7280;">Privacy Policy</a>
     <a href="/terms_and_conditions.html" style="text-decoration: none; color: #6b7280;">Terms & Conditions</a>
     <a href="/contact_page_form.html" style="text-decoration: none; color: #6b7280;">Contact</a>
+    <a href="/consumer_health_data.html" style="text-decoration: none; color: #6b7280;">consumer Health Data Notice</a>
+
   </div>
 
   <script type="module" src="/src/main.tsx"></script>
