--- a/public/consumer_health_data.html
+++ b/public/consumer_health_data.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consumer Health Data Notice - ThriveOn</title>
-    <!-- ✅ Favicon -->
-      <link rel="icon" href="favicon.png" type="image/png" />
+    
+    <link rel="icon" href="/favicon.png" type="image/png" />
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
