--- a/public/terms_and_conditions.html
+++ b/public/terms_and_conditions.html
@@ -7,6 +7,8 @@
   <title>Terms and Conditions - ThriveOn</title>
  
   <link rel="icon" href="/favicon.png" type="image/png" />
+  <link rel="shortcut icon" href="/favicon.png" type="image/png" />
+
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
