--- a/public/consumer_health_data.html
+++ b/public/consumer_health_data.html
@@ -7,6 +7,8 @@
     <title>Consumer Health Data Notice - ThriveOn</title>
     
     <link rel="icon" href="/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="/favicon.png" type="image/png" />
+
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
